# django_test

./: README.md  pyproject.toml
notes/noteapp/: admin.py  models.py  views.py
notes/noteapp/migrations/: 0001_initial.py
notes/noteapp/templates/noteapp/: index.html
notes/notes/: settings.py  urls.py
notes/users/migrations/: 0001_initial.py
