[tool.poetry]
name = "hw-10-django"
version = "0.1.0"
description = ""
authors = ["PIRomanCod <111997187+PIRomanCod@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_10_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"
selenium = "^4.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
